# rust-1brc

./: Cargo.toml  README.md  baseline.txt  justfile
src/: main.rs  parallel.rs  sequential.rs  util.rs
