[package]
name = "rust-1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"


[profile.release]
lto = true
codegen-units = 1

[features]
default = []
sequential = []
parallel = []
